<resources>
    <string name="app_name">Pressensi</string>
    <string name="launch_activity">Launch activity</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="error_email">Email tidak boleh kosong !</string>
    <string name="error_password">Kata sandi tidak boleh kosong !</string>
    <string name="tab_log">Attendance Data</string>
    <string name="tab_chart">Attendance Statistics</string>
    <string name="tab_gaji">Salary Information</string>
    <string name="tab_history">History Information</string>
    <string name="tab_pegawai">Employee List</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="text_pengumuman">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.</string>
    <string name="label_warning">Warning</string>
    <string name="label_message_apps_requirement">This app requires read phone state permission to run properly.</string>
    <string name="label_show_permission">Show permission</string>
    <string name="label_close_app">Close Apps</string>
    <string name="btn_activity_apel_izin">Permission</string>
    <string name="activity_edit_profile_ubah_foto">Change Photos</string>
    <string name="activity_edit_profile_nama">Name</string>
    <string name="activity_edit_profile_telepon">Telephone</string>
    <string name="activity_edit_profile_alamat">Address</string>
    <string name="title_image_picker">Pilih Foto</string>
    <string name="label_message_error_name">Nama tidak boleh kosong</string>
    <string name="label_message_email_tidak_valid">Email tidak valid</string>
    <string name="label_message_error_telephone">Telepon tidak boleh kosong</string>
    <string name="label_message_error_address">Alamat tidak boleh kosong</string>
    <string name="label_message_edit_berhasil">Data akun berhasil diperbarui</string>
    <string name="activity_login_nip" translatable="false">Nip/No. Telp</string>
    <string name="activity_login_password">Password</string>
    <string name="btn_activity_login_forgot">Forgot Password ?</string>
    <string name="label_message_logging_in" translatable="false">Memuat…</string>
    <string name="label_message_tidak_dapat_login">Tidak dapat masuk</string>
    <string name="label_message_error_koneksi">Tidak dapat mengkakses data.\n  Mohon periksa koneksi anda kembali</string>
    <string name="label_message_mengambil_data_user">Mengambil informasi pengguna…</string>
    <string name="label_message_error_server">Ada kesalahan pada server</string>
    <string name="label_sign_in_with" translatable="false">Sign In With</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Login</string>
    <string name="activity_main_keterangan">Ket : </string>
    <string name="activity_cuti_pilih_tipe">Select Type</string>
    <string name="activity_cuti_pilih_tgl_pengajuan">Date of filing</string>
    <string name="activity_cuti_pilih_tgl_dr_tanggal">Dari tanggal</string>
    <string name="activity_cuti_pilih_tgl_sampai_tanggal">Sampai tanggal</string>
    <string name="activity_cuti_pilih_keterangan">Information</string>
    <string name="btn_activity_cuti_batalkan">Cancel</string>
    <string name="btn_activity_cuti_ajukan">Submit</string>
    <string name="title_pengajuan">Submission</string>
    <string name="label_message_error_tanggal_awal">Start date is empty</string>
    <string name="label_message_error_tanggal_akhir">End date is empty</string>
    <string name="label_message_error_keterangan">Information must be filled in</string>
    <string name="label_message_pengajuan_lembur_submitted">Pengajuan lembur anda berhasil dikirim!</string>
    <string name="activity_profile_unit">Unit</string>
    <string name="activity_profile_email">Email</string>
    <string name="btn_activity_keluar">Logout</string>
    <string name="btn_activity_ubah_kata_sandi">Change Password</string>
    <string name="activity_ubah_pass_pass_lama">Old Password</string>
    <string name="activity_ubah_pass_pass_baru">New Password</string>
    <string name="activity_ubah_pass_pass_ulangi">Repeat Password</string>
    <string name="label_message_error_password">Kata sandi tidak boleh kosong !</string>
    <string name="activity_info_gaji_nama">Name</string>
    <string name="activity_info_gaji_NIP">NIP</string>
    <string name="activity_info_gaji_jabatan">Position</string>
    <string name="activity_info_gaji_tanggal">Date</string>
    <string name="activity_info_gaji_departemen">Department</string>
    <string name="activity_info_gaji_info_tunjangan_kinerja">Performance Allowance Information</string>
    <string name="activity_info_gaji_gaji_pokok">Basic Salary</string>
    <string name="activity_info_gaji_potongan_tidak_hadir">Pieces are not present</string>
    <string name="activity_info_gaji_potongan_lainnya">Other pieces</string>
    <string name="activity_info_gaji_total_pendapatan">Total income</string>
    <string name="activity_info_gaji_total_tunjangan_kinerja">Total performance allowance</string>
    <string name="activity_info_gaji_total">Total</string>
    <string name="data_absensi_ke_tanggal">To Date</string>
    <string name="data_absensi_tanggal">Date</string>
    <string name="data_absensi_ringkasan_data_abseni">Summary of attendance data :</string>
    <string name="data_absensi_waktu_datang">Time to come</string>
    <string name="data_absensi_waktu_istirahat">Time off</string>
    <string name="data_absensi_waktu_kembali">Time back</string>
    <string name="data_absensi_waktu_keluar">Time out</string>
    <string name="data_absensi_status">Status</string>
    <string name="data_absensi_foto">Photo</string>
    <string name="btn_tampilkan">Show</string>
    <string name="btn_istirahat">Break</string>
    <string name="btn_keluar">Exit</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>
    <string name="label_message_gagal_mengambil_keterangan">Cannot retrieve the information data</string>
    <string name="label_login_kembali">login kembali</string>
    <string name="label_message_tidak_ada_notifikasi">There are no notifications</string>
    <string name="label_message_tidak_ada_data_notifikasi">There is no notification data</string>
    <string name="label_message_tidak_ada_news">Tidak dapat menampilkan berita</string>
    <string name="label_message_error_absensi">Cannot check attendance</string>
    <string name="lable_message_error_crop_action">This device doesn\'t support the crop action!</string>
    <string name="label_message_error_absen_keluar">Unable to make an absence out</string>
    <string name="title_dialog_success">Success!</string>
    <string name="title_dialog_warning">Warning!</string>
    <string name="title_dialog_error">Error!</string>
    <string name="label_message_error_izin_pulang">Cannot do go home permit</string>
    <string name="label_message_error_ambil_foto">Cannot take photo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="start_time">Start Time</string>
    <string name="timeNol">-- : --</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_message_account_has_expired">Your account has expired</string>
    <string name="label_message_for_more_information">For more information :\nhttp://pressensi.com</string>
    <string name="title_log_absensi">Log Absensi</string>
    <string name="label_message_belum_ada_data">Belum ada data</string>
    <string name="label_date">Date</string>
    <string name="title_izin_amp_cuti" translatable="false"><![CDATA[Izin & Cuti]]></string>
    <string name="title_pengumuman" translatable="false">Pengumuman</string>
    <string name="title_profile" translatable="false">Profil</string>
    <string name="title_reimburse" translatable="false">Reimburse</string>
    <string name="title_premium" translatable="false">Premium</string>
    <string name="label_duration">Duration</string>
    <string name="label_information">Information</string>
    <string name="label_message_have_an_account">Already have an account?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_work_hour">Work Hours</string>
    <string name="title_fake_gps_detected">Fake Location Detected</string>
    <string name="label_message_fake_gps_detected">Please turn off your Fake Location application</string>
    <string name="title_gps_disabled">GPS is disabled</string>
    <string name="label_message_gps_disabled">Please set your GPS to be high accuracy on settings menu. Do you want to go to settings menu?</string>
    <string name="label_create_new_account">Create New Account</string>
    <string name="label_make_sure_the_data_you_input_is_correct">Make sure the data you input is correct</string>
    <string name="label_full_name">Nama Lengkap</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_company_name">Company Name</string>
    <string name="label_company_address">Company Address</string>
    <string name="label_about_your_company">About Your Company</string>
    <string name="label_submit">Submit</string>
    <string name="facebook_app_id" translatable="false">660056801157385</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb660056801157385</string>
    <string name="google_client_id" translatable="false">309739659484-93re8ilqskmfc3h2ccdn9rm4ev7h9sgp.apps.googleusercontent.com</string>
    <string name="title_welcome_slider_1">Welcome</string>
    <string name="label_welcome_slider_1">Get to know more about PRESSenSI</string>
    <string name="title_welcome_slider_2" translatable="false">Ease Your Daily Work-life</string>
    <string name="label_welcome_slider_2" translatable="false">Enjoy our features that make everyday work-life easier.</string>
    <string name="title_welcome_slider_3" translatable="false">Get Notified Whenever &amp; Wherever</string>
    <string name="str_password">Password</string>
    <string name="str_lupa_password">Forget your password?</string>
    <string name="str_email">user@gmail.com</string>
    <string name="str_judul">Judul</string>
    <string name="str_absensi_harian">Absensi Harian</string>
    <string name="log_in">LOG IN</string>
    <string name="str_login">LOGIN</string>
    <string name="str_metode_lain">Metode lain</string>
    <string name="halo_msg">Halo</string>
    <string name="samsan_tech">Samsan Tech</string>
    <string name="perhatian">Perhatian</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="reward">Reward</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="agenda">Agenda</string>
</resources>