<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_230sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pengumuman"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_marginVertical="@dimen/_6sdp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_judul"
                style="@style/poppinsBold"
                android:textSize="@dimen/_12sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/grey_black_1000"/>

            <TextView
                android:id="@+id/tv_description"
                style="@style/poppinsRegularSmall"
                android:textSize="@dimen/_10sdp"
                android:layout_width="@dimen/_113sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="28dp"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/btn_selengkapnya"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:text="@string/selengkapnya" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>