<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.login.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:background="@color/colorPrimary">
                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/logo_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/_17sdp"
                    android:textColor="@color/white"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_20sdp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email_01"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_01"
                        android:drawableStart="@drawable/ic_person_dark_grey_24dp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_email"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pw_01"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_01"
                        android:drawableStart="@drawable/ic_lock_dark_gray_24dp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:imeOptions="actionDone"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_lupapw_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    style="@style/MyCustomTabTextAppearance"
                    android:gravity="center"
                    android:text="@string/str_lupa_password" />

                <Button
                    android:id="@+id/btn_masuk_01"
                    style="@style/button_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/str_login"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_metode_lain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_medium"
                    android:text="@string/str_metode_lain"
                    android:layout_marginTop="@dimen/_15sdp"
                    style="@style/MyCustomTabTextAppearance"
                    android:gravity="center"/>

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/btn_google"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/google"
                    style="@style/clickableBackgroundBorderless"
                    android:background="@drawable/round_button"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>