<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.beranda.BerandaFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:src="@drawable/dummy_profile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/profileImage"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <TextView
                    style="@style/poppinsRegularSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/halo_msg"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/poppinsBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/poppinsRegularSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samsan_tech"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_notifications_none__white_24"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_90sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="4"
                android:baselineAligned="false">

                <LinearLayout
                    style="@style/clickableBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium">

                    <LinearLayout
                        android:id="@+id/menu_agenda_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_agenda_01"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/shape_circle_yellow"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/tv_agenda_01"
                            style="@style/poppinsRegularSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:singleLine="true"
                            android:text="@string/agenda"
                            android:textColor="@color/textBottomGrey" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    style="@style/clickableBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium">

                    <LinearLayout
                        android:id="@+id/menu_aktivitas_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_aktivitas_02"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/shape_circle_yellow"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/tv_aktivitas_02"
                            style="@style/poppinsRegularSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:singleLine="true"
                            android:text="@string/aktivitas"
                            android:textColor="@color/textBottomGrey" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    style="@style/clickableBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium">

                    <LinearLayout
                        android:id="@+id/menu_reward_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_reward_03"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/shape_circle_yellow"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/tv_reward_03"
                            style="@style/poppinsRegularSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:singleLine="true"
                            android:text="@string/reward"
                            android:textColor="@color/textBottomGrey" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    style="@style/clickableBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium">

                    <LinearLayout
                        android:id="@+id/menu_pengajuan_04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_pengajuan_04"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/shape_circle_yellow"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/tv_pengajuan_04"
                            style="@style/poppinsRegularSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:singleLine="true"
                            android:text="@string/pengajuan"
                            android:textColor="@color/textBottomGrey" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/tv_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <TextView
                android:id="@+id/txt_perhatian_header"
                style="@style/poppinsBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perhatian"
                android:textSize="16sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/colorPrimary" />

            <include
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/tv_not_found_notif"
                layout="@layout/data_notfound"/>

            <include layout="@layout/loading_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_100sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification">

            <TextView
                android:id="@+id/txt_absensi_header"
                style="@style/poppinsBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_absensi_harian"
                android:textSize="16sp" />

            <View
                android:id="@+id/view_absensi"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/nav_header_height"
                android:id="@+id/tv_not_found_absen"
                layout="@layout/data_notfound"/>

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/rv_absensi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nav_header_height"
                android:orientation="horizontal" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>